--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <html>   
 
-<head>
-</head>
+<head> This is my header </head>
 
-<body>
-</body>
+<body> This is paragraph One </body>
 
 </html>
 
