--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>   
 
-<head> This is my header </head>
+<head>
+</head>
 
-<body> This is paragraph One </body>
+<body>
+</body>
 
 </html>
 
