added 2nd H1 tag

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>   
 
-<head>
-</head>
+<H1> This is my header </H1>
 
-<body>
-</body>
+<P> This is my paragraph line </P>
+  
+<H1> This is my 2nd header </H1>
 
 </html>
 
