--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <html>   
 
 <!-- please use CSS style tags here -->
-  
-<H1> This is my header </H1>
 
-<P> This is my paragraph line </P>
-  
-<H1> This is my 2nd header </H1>
+<body>
+  <H1> This is my header </H1>
 
+  <P> This is my paragraph line </P>
+  
+  <H1> This is my 2nd header </H1>
+</body>
+  
 </html>
 
 modify index.html
