Added STYLE tag per review comments

--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 
 <!-- please use CSS style tags here -->
 
+<head>
+    <style>
+      H1 (color:blue; font-size:300%)
+      P  (color:blue)
+    </style>
+
 <body>
   <H1> This is my header </H1>
 
@@ -11,5 +17,3 @@
 </body>
   
 </html>
-
-modify index.html
