Added headers 3rd and 4th

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <P> This is my paragraph line </P>
   
   <H1> This is my 2nd header </H1>
+  <H1> This is my 3rd header </H1>
+  <H1> This is my 4th header </H1>
+
 </body>
   
 </html>
